--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.4.0",
     "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
     "validator": "^13.7.0",
@@ -36,8 +38,8 @@
   },
   "devDependencies": {
     "eslint": "^8.4.1",
-    "eslint-plugin-import": "^2.25.3",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "nodemon": "^2.0.15"
   }
 }
